syntax = "proto3";

package manager.api.manager.feedback.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "manager.api.manager.feedback.v1";
option java_outer_classname = "FeedbackV1";

import "validate/validate.proto";

message ListFeedbackRequest {
  uint32 page = 1[(validate.rules).uint32 = {gte: 1}];
  uint32 pageSize = 2[(validate.rules).uint32 = {gte: 1,lte:50}];
  optional string order = 3[(validate.rules).string = {in: ["asc","desc"]}];
  optional string orderBy = 4[(validate.rules).string = {in: ["id","created_at"]}];
  optional uint32 appId = 5;
  optional uint32 categoryId = 6;
  optional string status = 7;
  optional string platform = 8;
}

message ListFeedbackReply {
  message Feedback {
    message App {
      uint32 id = 1;
      string name = 2;
    }
    message User {
      uint32 id = 1;
      string realName = 2;
      string nickName = 3;
    }
    message Category {
      uint32 id = 1;
      string name = 2;
    }
    uint32 id = 1;
    uint32 appId = 2;
    uint32 userId = 3;
    uint32 categoryId = 4;
    string title = 5;
    string content = 6;
    string status = 7;
    optional string images = 8;
    optional string contact = 9;
    string device = 10;
    string platform = 11;
    string version = 12;
    optional uint32 processedBy = 13;
    optional string processedResult = 14;
    uint32 createdAt = 15;
    uint32 updatedAt = 16;
    optional App app = 17;
    optional User user = 18;
    optional Category category = 19;
    repeated string imageUrls  = 20;
  }

  uint32 total = 1;
  repeated Feedback list = 2;
}

message CreateFeedbackRequest {
  uint32 appId = 1[(validate.rules).uint32 = {gte: 1}];
  uint32 categoryId = 2[(validate.rules).uint32 = {gte: 1}];
  string title = 3[(validate.rules).string = {min_len: 1}];
  string content = 4[(validate.rules).string = {min_len: 1}];
  optional string images = 5;
  optional string contact = 6;
  string device = 7[(validate.rules).string = {min_len: 1}];
  string platform = 8[(validate.rules).string = {min_len: 1}];
  string version = 9[(validate.rules).string = {min_len: 1}];
}

message CreateFeedbackReply {
  uint32 id = 1;
}

message DeleteFeedbackRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
}

message DeleteFeedbackReply {
}

message UpdateFeedbackRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
  string status = 2[(validate.rules).string = {min_len: 1}];
  optional string processedResult = 3;
}

message UpdateFeedbackReply {
}

